fixed dropdown padding issue, testing menu tap on mobile

--- a/style.css
+++ b/style.css
@@ -3,11 +3,9 @@
 :root {
 	--smc-green: #00953b;
 	--smc-blue: #0089cb;
-	--white: #ffffff;
 	}
-	
+
 *{
-	padding: 0;
 	margin: 0;
 	box-sizing: border-box;
 }
@@ -22,11 +20,12 @@ body{
 	margin-left: auto;
 	margin-right: auto;
 	width: 80%;
-  }
-  
-  ul{
-	  list-style: none;
-	}
+}
+
+.nav-btn ul{
+	list-style: none;
+	padding: 0;
+}
 
 a{
 	text-decoration: none;
@@ -44,31 +43,37 @@ section{
 	position: relative;
 	height: 100vh;
 	width: 100vw;
-	background-image: linear-gradient(to bottom, var(--smc-green), var(--smc-blue));
-	overflow: hidden;
+	overflow: auto;
 }
 
 .content{
-	color: white;
+	color: black;
+	background-color:white;
 }
 
-.content h1 { color: rgb(255, 255, 255); font-family: 'Helvetica Neue', sans-serif; font-size: 8vw;
-	font-weight: bold; letter-spacing: -1px; line-height: 1; text-align: center;}
+.content .light h1 { color: white; font-family: 'Helvetica Neue', sans-serif; font-size: 8vw; font-weight: bold; letter-spacing: -1px; line-height: 1; text-align: center;}
 
-.content h2 { color: white; font-family: 'Open Sans', sans-serif; font-size: 2vw; font-weight: 300; line-height: 32px; margin: 0 0 72px; text-align: center; }
+.content .light h2 { color: white; font-family: 'Open Sans', sans-serif; font-size: 2vw; font-weight: 300; line-height: 32px; margin: 0 0 72px; text-align: center; }
 
-.content p { color: white; font-family: 'Helvetica Neue', sans-serif; font-size: 14px;}
+.content .light p { color: white; font-family: 'Helvetica Neue', sans-serif; font-size: 14px;}
+
+.content h1 { color: black; font-family: 'Helvetica Neue', sans-serif; font-size: 8vw; font-weight: bold; letter-spacing: -1px; line-height: 1; text-align: center;}
+
+.content h2 { color: black; font-family: 'Open Sans', sans-serif; font-size: 2vw; font-weight: 300; line-height: 32px; margin: 0 0 72px; text-align: center; }
+
+.content p { color: black; font-family: 'Helvetica Neue', sans-serif; font-size: 14px;}
+
 
 .content footer {
 	position: fixed;
 	left: -1%;
-	bottom: 5%;
+	bottom: 1%;
 	width: 100%;
-	color: white;
+	color: black;
 	text-align: right;
  }
 
-footer .p { color: white; font-family: 'Helvetica Neue', sans-serif; font-size: 14px; line-height: 24px; margin: 0 0 24px}
+footer .p { color: black; font-family: 'Helvetica Neue', sans-serif; font-size: 14px; line-height: 24px; margin: 0 0 24px}
 
 .content .overlay{
 	position: absolute;
@@ -110,7 +115,7 @@ footer .p { color: white; font-family: 'Helvetica Neue', sans-serif; font-size: 
 }
 
 .logo{
-	color: #fff;
+	color: white;
 	font-size: 1.1rem;
 	font-weight: 600;
 	letter-spacing: 2px;
@@ -126,7 +131,7 @@ footer .p { color: white; font-family: 'Helvetica Neue', sans-serif; font-size: 
 	display: inline-block;
 	padding: .5rem 1.3rem;
 	font-size: .8rem;
-	border: 2px solid #fff;
+	border: 2px solid white;
 	border-radius: 2rem;
 	line-height: 1;
 	margin: 0 .2rem;
@@ -135,13 +140,13 @@ footer .p { color: white; font-family: 'Helvetica Neue', sans-serif; font-size: 
 }
 
 .btn.solid, .btn.transparent:hover{
-	background-color: #fff;
+	background-color: white;
 	color: var(--smc-blue);
 }
 
 .btn.transparent, .btn.solid:hover{
 	background-color: var(--smc-green);
-	color: #fff;
+	color: white;
 }
 
 .nav-links > ul{
@@ -156,7 +161,7 @@ footer .p { color: white; font-family: 'Helvetica Neue', sans-serif; font-size: 
 
 .nav-link > a{
 	line-height: 3rem;
-	color: #fff;
+	color: white;
 	padding: 0 .8rem;
 	letter-spacing: 1px;
 	font-size: .95rem;
@@ -192,7 +197,7 @@ footer .p { color: white; font-family: 'Helvetica Neue', sans-serif; font-size: 
 .dropdown-link > a{
 	display: flex;
 	background-color: var(--smc-green);
-	color: #ffffff;
+	color: white;
 	padding: .5rem 1rem;
 	font-size: .9rem;
 	align-items: center;
@@ -202,15 +207,34 @@ footer .p { color: white; font-family: 'Helvetica Neue', sans-serif; font-size: 
 
 .dropdown-link:hover > a{
 	font-weight: bold;
-	color: #fff;
+	background-color: #00bb4b;
+	color: white;
 }
 
 .dropdown-link i{
 	transform: rotate(-90deg);
 }
 
+.arrow{
+	position: absolute;
+	width: 11px;
+	height: 11px;
+	top: -5.5px;
+	left: 32px;
+	background-color: var(--smc-green);
+	transform: rotate(45deg);
+	cursor: pointer;
+	transition: .3s;
+	z-index: -1;
+}
+
+.dropdown-link:first-child:hover ~ .arrow{
+	background-color: #00bb4b;
+}
+
 .dropdown-link{
 	position: relative;
+	padding: 0;
 }
 
 .dropdown.second{
@@ -219,6 +243,11 @@ footer .p { color: white; font-family: 'Helvetica Neue', sans-serif; font-size: 
 	padding-left: .8rem;
 	cursor: pointer;
 	transform: translateX(10px);
+}
+
+.dropdown.second .arrow{
+	top: 10px;
+	left: -5.5px;
 }
 
 .nav-link:hover > .dropdown,
@@ -247,7 +276,7 @@ footer .p { color: white; font-family: 'Helvetica Neue', sans-serif; font-size: 
 	width: 1.6rem;
 	height: 3px;
 	border-radius: 3px;
-	background-color: #fff;
+	background-color: white;
 	position: relative;
 	z-index: 1001;
 	transition: .5s;
@@ -259,7 +288,7 @@ footer .p { color: white; font-family: 'Helvetica Neue', sans-serif; font-size: 
 	position: absolute;
 	width: inherit;
 	height: inherit;
-	background-color: #fff;
+	background-color: white;
 	border-radius: 3px;
 	transition: .5s;
 }
@@ -388,7 +417,7 @@ footer .p { color: white; font-family: 'Helvetica Neue', sans-serif; font-size: 
 
 	.dropdown-link > a{
 		background-color: var(--smc-green);
-		color: #fff;
+		color: white;
 		padding: 1.2rem 2rem;
 		line-height: 1;
 	}
@@ -401,7 +430,33 @@ footer .p { color: white; font-family: 'Helvetica Neue', sans-serif; font-size: 
 		padding: 1.2rem 2rem 1.2rem 4rem;
 	}
 
+	.dropdown-link:not(:nth-last-child(2)){
+		border-bottom: none;
+	}
+
+	.arrow{
+		z-index: 1;
+		background-color: var(--smc-green);
+		left: 10%;
+		transform: scale(1.1) rotate(45deg);
+		transition: .5s;
+	}
+
+	.dropdown .dropdown .arrow{
+		display: none;
+	}
+
+	.dropdown-link:first-child:hover ~ .arrow{
+		background-color: var(--smc-green);
+	}
+
 	.dropdown-link:hover > a{
+		background-color: var(--smc-green);
+		font-weight: bold;
+	}
+
+	.dropdown-link:active > a{
+		background-color: var(--smc-green);
 		font-weight: bold;
 	}
 
@@ -419,7 +474,7 @@ footer .p { color: white; font-family: 'Helvetica Neue', sans-serif; font-size: 
 	.log-sign{
 		flex: initial;
 		width: 100%;
-		padding: 1.5rem 1.9rem 5rem;
+		padding: 1.5rem 1.9rem 3.5rem;
 		justify-content: flex-start;
 		opacity: 0;
 		transform: translateY(15px);
